@@ -924,104 +924,6 @@ Future<Response> Master::Http::health(const Request& request) const
   return OK();
 }
 
-const static string HOSTS_KEY = "hosts";
-const static string LEVEL_KEY = "level";
-const static string MONITOR_KEY = "monitor";
-
-string Master::Http::OBSERVE_HELP()
-{
-  return HELP(
-    TLDR(
-        "Observe a monitor health state for host(s)."),
-    DESCRIPTION(
-        "This endpoint receives information indicating host(s)",
-        "health."
-        "",
-        "The following fields should be supplied in a POST:",
-        "1. " + MONITOR_KEY + " - name of the monitor that is being reported",
-        "2. " + HOSTS_KEY + " - comma separated list of hosts",
-        "3. " + LEVEL_KEY + " - OK for healthy, anything else for unhealthy"),
-    AUTHENTICATION(true));
-}
-
-Try<string> getFormValue(
-    const string& key,
-    const hashmap<string, string>& values)
-{
-  Option<string> value = values.get(key);
-
-  if (value.isNone()) {
-    return Error("Missing value for '" + key + "'");
-  }
-
-  // HTTP decode the value.
-  Try<string> decodedValue = process::http::decode(value.get());
-  if (decodedValue.isError()) {
-    return decodedValue;
-  }
-
-  // Treat empty string as an error.
-  if (decodedValue.isSome() && decodedValue.get().empty()) {
-    return Error("Empty string for '" + key + "'");
-  }
-
-  return decodedValue.get();
-}
-
-
-Future<Response> Master::Http::observe(
-    const Request& request,
-    const Option<string>& /*principal*/) const
-{
-  Try<hashmap<string, string>> decode =
-    process::http::query::decode(request.body);
-
-  if (decode.isError()) {
-    return BadRequest("Unable to decode query string: " + decode.error());
-  }
-
-  hashmap<string, string> values = decode.get();
-
-  // Build up a JSON object of the values we received and send them back
-  // down the wire as JSON for validation / confirmation.
-  JSON::Object response;
-
-  // TODO(ccarson):  As soon as RepairCoordinator is introduced it will
-  // consume these values. We should revisit if we still want to send the
-  // JSON down the wire at that point.
-
-  // Add 'monitor'.
-  Try<string> monitor = getFormValue(MONITOR_KEY, values);
-  if (monitor.isError()) {
-    return BadRequest(monitor.error());
-  }
-  response.values[MONITOR_KEY] = monitor.get();
-
-  // Add 'hosts'.
-  Try<string> hostsString = getFormValue(HOSTS_KEY, values);
-  if (hostsString.isError()) {
-    return BadRequest(hostsString.error());
-  }
-
-  vector<string> hosts = strings::split(hostsString.get(), ",");
-  JSON::Array hostArray;
-  hostArray.values.assign(hosts.begin(), hosts.end());
-
-  response.values[HOSTS_KEY] = hostArray;
-
-  // Add 'isHealthy'.
-  Try<string> level = getFormValue(LEVEL_KEY, values);
-  if (level.isError()) {
-    return BadRequest(level.error());
-  }
-
-  bool isHealthy = strings::upper(level.get()) == "OK";
-
-  response.values["isHealthy"] = isHealthy;
-
-  return OK(response);
-}
-
 
 string Master::Http::REDIRECT_HELP()
 {
