@@ -65,7 +65,7 @@ Deprecations:
 Additional API Changes:
   * [MESOS-4580] - Returning `202` (Accepted) for /reserve and related endpoints.
 
-  * [MESOS-4735] - Add 'output_file' field to CommandInfo.URI in Scheduler API
+  * [MESOS-4735] - Added 'output_file' field to CommandInfo.URI in Scheduler API
     and v1 Scheduler HTTP API.
 
   * [MESOS-5014] - Changes Call and Event Type enums in scheduler.proto
@@ -78,6 +78,8 @@ Additional API Changes:
 
   * [MESOS-5030] - Added non-terminal task metadata to the container resource
     usage information.
+
+  * [MESOS-5408] - Deleted the /observe HTTP endpoint.
 
 3rd Party Upgrades:
   * [MESOS-4805] - Upgraded vendored ry-http-parser-1c3624a to nodejs/http-parser 2.6.1.
